continue in project

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>electronics</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="css/giniral.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/allproduct.css">
-    <link rel="stylesheet" href="css/Home.css">
+    <link rel="stylesheet" href="./css/giniral.css">
+    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/allproduct.css">
+    <link rel="stylesheet" href="./css/Home.css">
     <link href="img/Electronic.png" rel="icon">
 
 </head>
@@ -189,150 +189,35 @@
             </div>
         </div>
     </section>
-    <section class="section4 contenir">
+    <section class="section2 contenir hh">
         <div class="slider xx">
             <h1>Category</h1>
             <div class="content_image flex">
                 <button class="btn1"><i class="fa-solid fa-chevron-left"></i></button>
-                <div class="product flex ul">
-           
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                    <div class="product-c">
-                        <img src="images/product-8.jpg" alt="Product"  class="imge">
-                        <div class="text-content">
-                            <h4>Product Name</h4>
-                            <p>Short description of the product.</p>
-                            <span class="price">$120</span>
-                        </div>
-                    </div>
-                </div>
+                <ul class="flex ul">
+                    <li><a href=""><img src="icons/1.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/2.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/3.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/4.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/5.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/6.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/7.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/8.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/9.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/10.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/11.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/12.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/13.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/14.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/15.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/16.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/17.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/18.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/19.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/20.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/21.jpg" alt=""></a></li>
+                    <li><a href=""><img src="icons/22.jpg" alt=""></a></li>
+                </ul>
                 <button class="btn2"><i class="fa-solid fa-chevron-right"></i></button>
             </div>
         </div>
